<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_agent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/imageview"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/background"
            app:tint="#FF4656"
            app:tintMode="multiply"
            />

        <com.pangeranmw.core.ui.OutlineTextView
            android:id="@+id/tv_agent_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/drukwide_medium"
            android:text="@string/agents"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:outlineColor="@color/white"
            app:outlineWidth="0dp" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:shapeAppearanceOverlay="@style/CornerCutTopLeftBottomRight"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="@+id/til_search"
            app:layout_constraintEnd_toEndOf="@+id/til_search"
            app:layout_constraintTop_toTopOf="@+id/til_search"
            app:layout_constraintBottom_toBottomOf="@+id/til_search"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="30dp"
            android:padding="6dp"
            android:id="@+id/til_search"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            app:endIconMode="custom"
            app:endIconTint="@color/white"
            android:textColorHint="@color/white"
            app:endIconDrawable="@drawable/line_valo"
            app:layout_constraintTop_toBottomOf="@+id/tv_agent_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monumentextended_regular"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:drawableStart="@drawable/search_valo"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/gradient_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_agent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_card_agent"
            app:layout_constraintTop_toBottomOf="@+id/til_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:nestedScrollingEnabled="false"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <include
            android:id="@+id/error"
            layout="@layout/error"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>