<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_agent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/background"
            app:tint="#FF4656"
            app:tintMode="multiply"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/orange"
            />

        <ImageView
            android:contentDescription="@string/imageview"
            android:id="@+id/img_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="130dp"
            android:src="@drawable/background_1"
            android:alpha="0.8"
            android:background="@color/black"
            />
        <ImageView
            android:contentDescription="@string/imageview"
            android:id="@+id/img_agent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/art"
            android:translationY="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/gradient_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <include
            android:id="@+id/error"
            layout="@layout/error"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_role"
            android:background="@drawable/ability_shape"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="500dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_header"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:contentDescription="@string/imageview"
                android:id="@+id/img_role"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_valo" />
            <TextView
                android:id="@+id/tv_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monumentextended_regular"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:layout_marginStart="20dp"
                tools:text="Initiator" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_codename"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:background="@drawable/ability_shape"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monumentextended_regular"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Codename : Hunter"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_role"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_codename"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_card_ability"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            />
        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fav"
                android:contentDescription="@string/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_favorite_24"
                app:backgroundTint="@color/white"
                app:tint="@color/orange" />
            <com.pangeranmw.core.ui.OutlineTextView
                android:id="@+id/tv_agent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/drukwide_medium"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:outlineColor="@color/white"
                app:outlineWidth="0dp"
                tools:text="@string/phoenix" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_other_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monumentextended_regular"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_marginTop="20dp"
            android:text="@string/similar_role"
            app:layout_constraintTop_toBottomOf="@+id/rv_ability"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_other_role"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            android:orientation="horizontal"
            android:id="@+id/rv_similar_role"
            tools:listitem="@layout/item_card_agent_recommendation"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>